--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,17 @@
 /lib
 /classes
 /checkouts
+/repl
+/out
+
 pom.xml
 pom.xml.asc
 *.jar
 *.class
+.*
 .lein-deps-sum
 .lein-failures
 .lein-plugins
 .lein-repl-history
+*.swp
+*.bak
